Simplified the app by removing the Frame which switches between pages and used ContentControl with UserControl content and switching between them using ViewNavigator.

--- a/Flashy/Flashy.csproj
+++ b/Flashy/Flashy.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DisplayMode.cs" />
+    <Compile Include="ViewsNavigator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -68,12 +70,26 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\DecksOverview.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\LearningMode.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\Overview.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pages\DecksOverview.xaml.cs">
+      <DependentUpon>DecksOverview.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\LearningMode.xaml.cs">
+      <DependentUpon>LearningMode.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Overview.xaml.cs">
       <DependentUpon>Overview.xaml</DependentUpon>
     </Compile>
