Added ToolbarItemsComposer to compose the toolbar based on what is in the main view.  Replaced events in the MainWindow with wpf commands.

--- a/Flashy/Flashy.csproj
+++ b/Flashy/Flashy.csproj
@@ -55,11 +55,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\CustomCommands.cs" />
     <Compile Include="DisplayMode.cs" />
-    <Compile Include="IViewsNavigator.cs" />
+    <Compile Include="Interfaces\IViewsNavigator.cs" />
     <Compile Include="Pages\AddDeckWindow.xaml.cs">
       <DependentUpon>AddDeckWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ToolbarConfigurationMode.cs" />
+    <Compile Include="ToollbarItemsComposer.cs" />
     <Compile Include="ViewsNavigator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
